@@ -307,10 +307,22 @@
 	src/player.h, src/net/guildhandler.cpp, src/net/protocol.h: Add
 	permissions to guild members. Alt-Gr fix for Rotonen.
 
+2008-07-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+
+	* src/main.cpp: Remove possible trailing slash at the end of the
+	update host, since otherwise there'll be two of them.
+
 2008-07-17  David Athay  <ko2fan@gmail.com>
 
 	*  src/gui/partywindow.cpp: Fixed crash bug with accepting
 	party invites.
+
+2008-07-16  Lloyd Bryant  <lloyd_bryant@netzero.net>
+
+	* src/logindata.h, src/gui/char_server.cpp, src/gui/char_server.h,
+	src/serverinfo.h, src/main.cpp, src/net/loginhandler.cpp,
+	src/net/loginhandler.h, src/net/network.cpp: Added support for
+	handling the custom eAthena packet that sends the update host.
 
 2008-07-14  Roderic Morris  <roderic@ccs.neu.edu>
 
